--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -37,5 +37,5 @@
 		fg-light:			#bbb,
 		border:				#cccccc,
 		border-bg:			rgba(144,144,144,0.075),
-		accent:				#d8475a
+		accent:				#49c8ff
 	);
